--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -11,18 +11,20 @@ My Blog - Posts Index
   <ol>
   {% for post in posts %}
     <li>
-      <h2>{{post.title|title}}</h2>
-      {% if post.content|length <= 100 %}
-        <p>{{post.content}}</p>
-      {% else %}
-        <p>{{post.content|slice:":101"}}...</p>
-      {% endif %}
-      <hr/>
+      <a href="{% url 'post-details' post.slug %}">
+        <h2>{{post.title|title}}</h2>
+        {% if post.content|length <= 100 %}
+          <p>{{post.content}}</p>
+        {% else %}
+          <p>{{post.content|slice:":101"}}...</p>
+        {% endif %}
+        <hr/>
+      </a>
     </li>
   {% endfor %}
   </ol>
 {% else %}  
-  <h1>No post found.</h1>
+  <h1>No posts yet.</h1>
 {% endif %}
   
 {% endblock content %}
