--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -1,10 +1,25 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
+{% load static %} 
 
-{% block page_title %}
-My Blog - {{post.title|slice:":6"|title}}  
-{% endblock page_title %}
+{% block title %} 
+{{ post.title }}
+{% endblock %} 
+
+{% block css_files %} 
+<link rel="stylesheet" href="{% static 'blog/post-detail.css' %}" /> 
+{% endblock %} 
 
 {% block content %}
-  <h2>{{post.title|title}}</h2>
-  <p>{{post.content}}</p>  
-{% endblock content %}
+<section id="summary">
+  <h2>{{ post.title }}</h2>
+  {% comment %} <article> {% endcomment %}
+    {% comment %} <img src="{% static "blog/images/"|add:post.image %}" alt="{{ post.title }}" /> {% endcomment %}
+    {% comment %} <address>By {{ post.author }}</address> {% endcomment %}
+    {% comment %} <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div> {% endcomment %}
+  {% comment %} </article> {% endcomment %}
+</section>
+
+<main>
+  {{ post.content|linebreaks }}
+</main>
+{% endblock %}
