--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,24 +1,43 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
+{% load static %}
 
-{% block page_title %}
-My Blog - Home Page  
-{% endblock page_title %}
+{% block title %} 
+My Blog 
+{% endblock %} 
+
+{% block css_files %}
+  <link rel="stylesheet" href="{% static 'blog/post.css' %}" />
+  <link rel="stylesheet" href="{% static 'blog/index.css' %}" />
+{% endblock %}
 
 {% block content %}
+<section id="welcome">
+  <header>
+    <img src="{% static 'blog/images/max.png' %}" alt="Max - The Author Of This Blog" />
+    <h2>MAXIMILIAN'S BLOG</h2>
+  </header>
+  <p>Hi, I am Max and I love to blog about tech and the world!</p>
+</section>
 
-{% if posts != None %}
-  {% for post in posts %}
-    <a href="{% url 'post-details' post.slug %}">
-      <h1>{{post.title}}</h1>
-      <p>{{post.content}}</p>
-    </a>
-  {% endfor %}
-  <a href="{% url 'index' %}">
-    All Posts
-  </a>
+<section id="latest-posts">
+  <h2>My Latest Thoughts</h2>
 
-{% else %}  
-  <h1>No posts on the blog yet.</h1>
-{% endif %}
-  
-{% endblock content %}
+  <ul>
+    {% for post in posts %}
+      {% include "blog/includes/post.html" %}
+    {% endfor %}
+  </ul>
+</section>
+
+<section id="about">
+  <h2>What I Do</h2>
+  <p>
+    I love programming, I love to help others and I enjoy exploring new
+    technologies in general!
+  </p>
+  <p>
+    My goal is to keep on growing as a developer - and if I could help you do
+    the same, I'd be very happy!
+  </p>
+</section>
+{% endblock %}
