--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,30 +1,23 @@
 {% extends "base.html" %}
+{% load static %}
 
-{% block page_title %}
-My Blog - Posts Index  
-{% endblock page_title %}
+{% block title %} 
+All My Posts
+{% endblock %} 
+
+{% block css_files %}
+  <link rel="stylesheet" href="{% static 'blog/post.css' %}" />
+  <link rel="stylesheet" href="{% static 'blog/all-posts.css' %}" />
+{% endblock %}
 
 {% block content %}
+<section id="all-posts">
+  <h2>My Collected Posts</h2>
 
-{% if posts != None %}
-  <h1>All Posts</h1>
-  <ol>
-  {% for post in posts %}
-    <li>
-      <a href="{% url 'post-details' post.slug %}">
-        <h2>{{post.title|title}}</h2>
-        {% if post.content|length <= 100 %}
-          <p>{{post.content}}</p>
-        {% else %}
-          <p>{{post.content|slice:":301"}}...</p>
-        {% endif %}
-        <hr/>
-      </a>
-    </li>
-  {% endfor %}
-  </ol>
-{% else %}  
-  <h1>No posts yet.</h1>
-{% endif %}
-  
-{% endblock content %}
+  <ul>
+    {% for post in posts %}
+      {% include "blog/includes/post.html" %}
+    {% endfor %}
+  </ul>
+</section>
+{% endblock %}
