--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-{% block page_title %}
-  Page Not Found
+{% block title %}
+We didn't find that page!
 {% endblock %}
 
 {% block content %}
-  <h1>:(</h1>
-  <p>Sorry, but we couldn't find this page.</p>
+  <h2>We're sorry!</h2>
+  <p>But we couldn't find that page!</p>
 {% endblock %}
