--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,23 @@
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      {% block page_title %}
-        Monthly Challenges
-      {% endblock %}
-    </title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" href="{% static 'app.css' %}">
+  {% block css_files %}{% endblock %}
+</head>
+<body>
+  <header id="main-navigation">
+    <h1><a href="{% url 'home' %}">Max' Blog</a></h1>
+    <nav>
+      <a href="{% url 'index' %}">All Posts</a>
+    </nav>
+  </header>
 
-    {% block css_files %}
-    {% endblock %}
-  </head>
-  <body>
-    {% block content %}
-      No content
-    {% endblock %}
-  </body>
+  {% block content %}
+  {% endblock %}
+</body>
 </html>
