--- a/blog/static/blog/index.css
+++ b/blog/static/blog/index.css
@@ -1,11 +1,13 @@
 #welcome {
-  background: linear-gradient(to right top, #6305dd, #390281);
+  background: linear-gradient(to right top, #000000, #593412);
   padding: 6rem 12%;
 }
 
 #welcome header {
   display: flex;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   margin: 3rem auto;
 }
 
@@ -16,21 +18,22 @@
   object-position: top;
   border: 5px solid white;
   border-radius: 12px;
-  background-color: #ffe1bf;
+  background-color: #ffffff;
   transform: rotateZ(-5deg);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  margin-bottom: 2rem;
 }
 
 #welcome h2 {
   font-size: 3.5rem;
-  margin: 0 0 0 2rem;
+  margin: 0;
   color: #e4e4e4;
-  width: 10rem;
 }
 
 #welcome p {
   color: white;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 #latest-posts {
@@ -61,8 +64,9 @@
 #about {
   text-align: center;
   padding: 3rem;
-  background-color: #e48900;
+  background-color: #000000;
   margin-top: 5rem;
+  color: white;
 }
 
 #about h2 {
