--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %} 
+{% extends 'base.html' %}
 {% load static %}
 
-{% block title %} 
-My Blog 
-{% endblock %} 
+{% block title %}
+  My Blog
+{% endblock %}
 
 {% block css_files %}
   <link rel="stylesheet" href="{% static 'blog/post.css' %}" />
@@ -11,33 +11,26 @@ My Blog
 {% endblock %}
 
 {% block content %}
-<section id="welcome">
-  <header>
-    <img src="{% static 'blog/images/max.png' %}" alt="Max - The Author Of This Blog" />
-    <h2>MAXIMILIAN'S BLOG</h2>
-  </header>
-  <p>Hi, I am Max and I love to blog about tech and the world!</p>
-</section>
+  <section id="welcome">
+    <header>
+      <h2>JOHN DOE'S BLOG</h2>
+    </header>
+    <p>Hi, I am John Doe and I love to blog about tech and the world!</p>
+  </section>
 
-<section id="latest-posts">
-  <h2>My Latest Thoughts</h2>
+  <section id="latest-posts">
+    <h2>My Latest Thoughts</h2>
 
-  <ul>
-    {% for post in posts %}
-      {% include "blog/includes/post.html" %}
-    {% endfor %}
-  </ul>
-</section>
+    <ul>
+      {% for post in posts %}
+        {% include 'blog/includes/post.html' %}
+      {% endfor %}
+    </ul>
+  </section>
 
-<section id="about">
-  <h2>What I Do</h2>
-  <p>
-    I love programming, I love to help others and I enjoy exploring new
-    technologies in general!
-  </p>
-  <p>
-    My goal is to keep on growing as a developer - and if I could help you do
-    the same, I'd be very happy!
-  </p>
-</section>
+  <section id="about">
+    <h2>What I Do</h2>
+    <p>I love programming, I love to help others and I enjoy exploring new technologies in general!</p>
+    <p>My goal is to keep on growing as a developer - and if I could help you do the same, I'd be very happy!</p>
+  </section>
 {% endblock %}
